# disha.ai

./: README.md  SETUP.md  description.md
backend/: .env.example  .gitignore  OPTIMIZATION_NOTES.md  README.md  project.md  pyproject.toml  test_groq.py
backend/app/: config.py  main.py
backend/app/api/: deps.py  router.py
backend/app/db/: models.py  session.py
backend/app/orchestrator/: graph.py  run.py  state.py
backend/app/rag/: documents.py  embeddings.py  ingest.py  retriever.py
backend/app/services/: cv_parser.py  interview.py  job_matching.py  learning_agent.py  learning_resources.py  llm_utils.py  master_roadmap.py  mcp_client.py  practice.py  roadmap.py  roadmap_personalization.py  skill_gap.py  skill_overlap.py  skills_catalog.py  synthetic_recommender.py  voice.py
backend/migrations/: env.py
backend/migrations/versions/: 274f692c1d08_users_student_profiles_roadmaps_scrape_.py  59afa7d4a79e_add_learning_curricula.py  (+9 more)
backend/scraper/: __init__.py  crawl.py  logging_config.py  models.py  normalize.py  run.py  scraper.py  tech_focus.py
backend/scripts/: api_smoke_test.py  check_corpus.py  debug_job_match.py  debug_learning.py  generate_master_roadmaps.py  refresh_jobs.ps1  refresh_jobs.sh  seed_jobs.py  validate_master_roadmaps.py
backend/tests/: test_cv_parser.py  test_job_matching.py  test_learning_resources.py  test_master_roadmap.py  test_mcp_client.py  test_orchestrator_nodes.py  test_roadmap_generation.py  test_roadmap_personalization.py  test_skill_gap.py  test_skills_catalog.py  test_synthetic_recommender.py  test_tech_focus.py
(+185 files in other folders)
