[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "crawl4ai>=0.9.1",
    "fastapi>=0.139.0",
    "google-cloud-speech>=2.40.0",
    "google-cloud-texttospeech>=2.37.0",
    "httpx>=0.28.1",
    "langchain-groq>=1.1.3",
    "langchain-mcp-adapters>=0.3.0",
    "langgraph>=1.2.9",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn>=0.51.0",
]
